Update to gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .DS_Store
 .idea/*
 out/
+Block 0 - Syntax, Semantics, parsers/code/.idea/
+Block 0 - Syntax, Semantics, parsers/code/out/
+Block 0 - Syntax, Semantics, parsers/code/AssignmentZero.iml
