--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-Block 0 - Syntax, Semantics, parsers/code/.idea/
-Block 0 - Syntax, Semantics, parsers/code/out/
-Block 0 - Syntax, Semantics, parsers/code/AssignmentZero.iml
+Block 0 - Syntax, Semantics, parsers/Code/.idea
+Block 0 - Syntax, Semantics, parsers/Code/out
+Block 0 - Syntax, Semantics, parsers/Code/.idea/
+Block 0 - Syntax, Semantics, parsers/Code/out/
+Block 0 - Syntax, Semantics, parsers/Code/AssignmentZero.iml
