update to gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Block 0 - Syntax, Semantics, parsers/Code/.idea
-Block 0 - Syntax, Semantics, parsers/Code/out
-Block 0 - Syntax, Semantics, parsers/Code/.idea/
-Block 0 - Syntax, Semantics, parsers/Code/out/
-Block 0 - Syntax, Semantics, parsers/Code/AssignmentZero.iml
+/Block 0 - Syntax, Semantics, parsers/Code/.idea/misc.xml
+/Block 0 - Syntax, Semantics, parsers/Code/.idea/workspace.xml
+/Block 0 - Syntax, Semantics, parsers/Code/.idea
+/Block 0 - Syntax, Semantics, parsers/Code/out
+/Block 0 - Syntax, Semantics, parsers/Code/AssignmentZero.iml
