--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /Block 0 - Syntax, Semantics, parsers/Code/out/*
 /Block 0 - Syntax, Semantics, parsers/Code/AssignmentZero.iml
 
+/Block 1 - OOP/Code/.idea/*
+/Block 1 - OOP/Code/out/*
+/Block 1 - OOP/Code/AssignmentOne.iml
+
+/Block 2 - Functional Programming/Code/.idea/*
+/Block 2 - Functional Programming/Code/out/*
+/Block 2 - Functional Programming/Code/AssignmentTwo.iml
+
+/Block 3 - Logic Programming/Code/.idea/*
+/Block 3 - Logic Programming/Code/out/*
+/Block 3 - Logic Programming/Code/AssignmentThree.iml
