Added Block 2 files & Project

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 /Block 2 - Functional Programming/Code/.idea/*
 /Block 2 - Functional Programming/Code/out/*
+/Block 2 - Functional Programming/Code/lib/*
 /Block 2 - Functional Programming/Code/AssignmentTwo.iml
 
 /Block 3 - Logic Programming/Code/.idea/*
