La till uppgiften för block 3

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@
 
 /Block 3 - Logic Programming/Code/.idea/*
 /Block 3 - Logic Programming/Code/out/*
-/Block 3 - Logic Programming/Code/AssignmentThree.iml
+/Block 3 - Logic Programming/Code/Code.iml
